# cybertron-framework

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt  settings.yaml
code/: cli.py  requirements.txt  settings.yaml  test_setup.py  web.py
code/scripts/: cli.sh  common.sh  requirements.sh  web.sh
code/src/app/: app_manager.py
code/src/app/input/: first_input_manager.py  global_input_manager.py  sap_employees_input_manager.py
code/src/app/mapper/: global_mapper_manager.py  sap_employees_mapper_manager.py
code/src/app/orchestrator/: orchestrator.py
code/src/app/output/: abstract_output_manager.py  global_output_manager.py  sap_employees_output_manager.py
code/src/app/resources/: base_view.py  orchestrator_base_view.py  version.py
code/src/app/routes/: entry.py  version.py
code/src/app/transformer/: abstract_transformer_manager.py  global_transformer_manager.py  sap_employees_transformer_manager.py
code/src/app/views/: entry.py  version.py
code/src/core/: app_manager_interface.py
code/src/core/environment/: environment.py  environment_interface.py
code/src/core/exception/: abort_process_exception.py  no_data_to_process_exception.py
code/src/core/helper/: benchmark.py  logger.py
code/src/include/: bigquery_connector.py  rest_client.py  sap_client.py  successfactors_api.py
cybertron_framework/helper/: logger.py
cybertron_framework/helper/__tests__/: test_logger.py
cybertron_framework/orchestrator/types/: sequence.py
sys/cloudbuild/: .cloudbuild.yaml
(+27 files in other folders)
