[tool.poetry]
name = "tiber-framework"
version = "0.0.0"
description = ""
authors = ["Making Science"]
readme = "README.md"
packages = [{include = "code"}]
include = ["pre-commit-config.yaml"]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"
flask = "^3.0.3"
coverage = "^7.4.4"
flask-restful = "^0.3.10"
flask-swagger = "^0.2.14"
flask-swagger-ui = "^4.11.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude="# noqa"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
